--- a/public/index.html
+++ b/public/index.html
@@ -15,8 +15,8 @@
     <link rel="stylesheet" type="text/css"  href="css/bootstrap.css">
     <link rel="stylesheet" type="text/css" href="fonts/font-awesome/css/font-awesome.css">
     <link rel="stylesheet" type="text/css" href="csshake.min.css">
-
-    <title>React App</title>
+    <script src="client.js"></script>
+    <title>WebRTC by WangYuWei</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
