1124 sql connection,express and able to pass on para

--- a/public/index.html
+++ b/public/index.html
@@ -15,7 +15,7 @@
     <link rel="stylesheet" type="text/css"  href="css/bootstrap.css">
     <link rel="stylesheet" type="text/css" href="fonts/font-awesome/css/font-awesome.css">
     <link rel="stylesheet" type="text/css" href="csshake.min.css">
-    <title>WebRTC by WangYuWei</title>
+    <title>Website by WangYuWei</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
